Commit 11: Creamos boton delete en html que se supone que funciona, pero no lo podemos comprobar porque aunque hemos solucionado el CORS a priori, para esto no se ha solucionado y ahora si vamos a solucionarlo del todo

--- a/Video--3/web/index.html
+++ b/Video--3/web/index.html
@@ -28,11 +28,30 @@
               <h2>${movie.title}</h2>
               <img src="${movie.poster}" alt="${movie.title}">
               <h3>Director: ${movie.director}<h3>
+
+              <button>Delete</button>
             </article>
           `
         }).join('')
 
         document.querySelector('main').innerHTML = html
+
+        document.addEventListener('click', e => {
+          if (e.target.matches('button')) {
+            const article = e.target.closest('article')
+            const id = article.dataset.id
+
+            fetch('http://localhost:3210/movies/${id}', {
+              method: 'DELETE'
+            })
+              .then(res => res.json())
+              .then(res => {
+                if (res.ok) {
+                  article.remove()
+                }
+              })
+          }
+        })
       })
   </script>
 </head>
