--- a/Video--3/web/index.html
+++ b/Video--3/web/index.html
@@ -41,7 +41,7 @@
             const article = e.target.closest('article')
             const id = article.dataset.id
 
-            fetch('http://localhost:3210/movies/${id}', {
+            fetch(`http://localhost:3210/movies/${id}`, {
               method: 'DELETE'
             })
               .then(res => res.json())
