Commit 4: creado input donde escribo para preguntar a la ia

--- a/Video--6/client/index.html
+++ b/Video--6/client/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <section id="chat">
-    <form action="">
-
+    <form id="form">
+      <input type="text" name="message" id="input" placeholder="Type a message" autocomplete="off"/>
     </form>
   </section>
 </body>
