--- a/Video--6/client/index.html
+++ b/Video--6/client/index.html
@@ -4,11 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Codesthenos Live Chat</title>
-  <script type="module">
-    import { io } from 'https://cdn.socket.io/4.3.2/socket.io.esm.min.js'
-
-    const socket = io()
-  </script>
+  <script type="module" src="script.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
