Commit 7: incluyo el boton send en el html y en el script de js ahora nos traemos del documento tanto el input como el formulario, y solo capaces de enviar mensajes al servidor, aunque el server aun no hace nada con ellos

--- a/Video--6/client/index.html
+++ b/Video--6/client/index.html
@@ -11,6 +11,7 @@
   <section id="chat">
     <form id="form">
       <input type="text" name="message" id="input" placeholder="Type a message" autocomplete="off"/>
+      <button type="submit">Send</button>
     </form>
   </section>
 </body>
