--- a/Video--6/client/index.html
+++ b/Video--6/client/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <section id="chat">
+    <ul id="messages"></ul>
     <form id="form">
       <input type="text" name="message" id="input" placeholder="Type a message" autocomplete="off"/>
       <button type="submit">Send</button>
